fixed gsap bug on IOs first load

--- a/src/pages/RootLayout/Menu/Menu.module.css
+++ b/src/pages/RootLayout/Menu/Menu.module.css
@@ -12,6 +12,7 @@
   justify-content: center;
   align-items: center;
   transition: transform 1s ease-in-out;
+  will-change: transform;
   z-index: 99996;
   background-color: var(--color-secondary);
   color: var(--color-white);
